tests/errors/flow/while-true-no-return.fn
---
Description: while(true) body without return cannot guarantee return
Expected: FN4001
---

type Program
{
    fn Bad -> i32
    {
        while true
        {
            var x = 1
        }
    }

    static fn Main -> i32
    {
        return Bad()
    }
}
